-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0 RC
-
None
-
Qt 5.4 RC, OS X 10.10.1, MacBook Pro Retina late 2013
See attached image. The checkboxes are not painted correctly on QWebView. This issue seems to be only on OS X.
- relates to
-
QTBUG-42948 Webkit checkbox not shown
-
- Closed
-
-
QTBUG-43366 QWebView problems with loading checkboxes
-
- Closed
-
- resulted from
-
QTBUG-43450 QMacStyle on Yosemite: QStyle::drawPrimitive(QStyle::PE_IndicatorCheckBox, ...) draws in wrong place when not active
-
- Reported
-
For Gerrit Dashboard: QTBUG-43070 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
181860,2 | Fix misplaced checkboxes on macOS | 5.8 | qt/qtwebkit | Status: MERGED | +2 | 0 |