Workaround: Missing Checkboxes on OS X

On OS X Checkboxes were missing in the QWebView.
Workaround is to set style manually as in the comment section
of the Qt bugreport below.
Known Qt Bug at: https://bugreports.qt.io/browse/QTBUG-43070
Reported at https://github.com/sieren/QSyncthingTray/issues/34#issuecomment-166619669